crates/ridge-parser/tests/fixtures/errors/p002_unexpected_token.ridge
-- expect: P002
-- Trigger: operator `*` where an expression atom is expected.
fn f = *
